Fixed minor layout issues on Team detail component

--- a/src/app/dashboard-module/domain-module/team-module/team-detail/team-detail.component.css
+++ b/src/app/dashboard-module/domain-module/team-module/team-detail/team-detail.component.css
@@ -14,12 +14,12 @@
 }
 
 .options-section {
-  display: block ruby;
+  display: flex;
 }
 
 .toggle-section {
   margin: auto;
-  display: contents;
+  display: block;
 }
 
 :host /deep/ .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
